# ImgBatch

./: .gitignore  README.md  build.bat  build.py  extract_cn.py  image_compressor.pyw  imgbatch-api.spec  imgbatch_api_entry.py  inspect-section-base.py  inspect-title-pngs.py  normalize-title-pngs.py  package-lock.json  package.json  requirements-api.txt  trim-title-pngs.py  vercel.json  启动.bat  说明.txt
docs/: TAURI_MIGRATION.md
frontend/: index.html  package-lock.json  package.json  quick.html  tailwind.config.js  vite.config.ts
imgbatch/: __init__.py  history.py
memory/: ceo-review-summary.md
scripts/: build-frontend.ps1  build-sidecar.ps1  build-tauri.ps1  context-menu-common.ps1  export_i18n.py  find-mojibake.py  fix-hklm-context-menu.ps1  gen-icons.py  gen_icon.py  process_generated_icons.py  register-context-menu.ps1  unregister-context-menu.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  commands.rs  lib.rs  main.rs  sidecar.rs
src-tauri/windows/: hooks.nsh
tests/: __init__.py  _debug_anim_webp.py  _debug_anim_webp2.py  _debug_anim_webp3.py  _debug_lossless_webp.py  conftest.py  test_ai_rename.py  test_api.py  test_balanced_compress.py  test_compress.py  test_convert.py  test_doc_convert.py  test_doc_preview.py  test_extensions.py  test_filter.py  test_gif.py  test_history.py  test_image_ops.py  test_infra.py  test_matting.py  test_rename.py  test_spritesheet.py  test_video_anim.py  test_webm_compress.py
website/: README.md  index.html  package-lock.json  (+3 more)
(+102 files in other folders)
