[package]
name = "imgbatch"
version = "3.0.0"
description = "ImgBatch - Batch Image Processor"
authors = ["ImgBatch"]
edition = "2021"

[lib]
name = "imgbatch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
